--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/float-grid.css">
+  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans|Paprika" rel="stylesheet">
   <title>DreamCatcher</title>
 </head>
 <body>
-  <p>Hello World</p>
+  <header role="banner">
+    <div class="row">
+      <div class="col-12">
+        <h1>Dream Catcher</h1>
+        <ul class="nav-links">
+          <li><a href="#">Log In</a></li>
+        </ul>
+      </div>
+    </div>
+  </header>
+  <script src="js/data.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
