--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,12 @@
       </div>
     </div>
   </header>
+  <main role="main" class="js-output" aria-live="assertive" hidden>
+  </main>
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
   <script src="js/data.js"></script>
   <script src="js/app.js"></script>
 </body>
