--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,27 @@
       </div>
     </div>
 
+    <!-- Login Screen -->
+
+    <div class="view" id="login">
+      <div class="row">
+        <div class="col-4">
+          <form role="form" action="/login" accept-charset="UTF-8" method="post" class="login-form">
+            <fieldset>
+              <legend>Log In</legend>
+              <label for="username">User Name:</label>
+              <input type="text" name="username" id="username" required>
+              <label for="password">Password:</label>
+              <input type="password" name="password" id="password" required>
+              <button type="submit">Submit</button>
+            </fieldset>
+          </form>
+        </div>
+        <div class="col-4"></div>
+        <div class="col-4"></div>
+      </div>
+    </div>
+
   </main>
   <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
