added dream journal screen

--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,33 @@
       </div>
     </div>
 
+    <!-- Dream Journal Screen -->
+
+    <div class="view" id="dream-journal">
+      <div class="row">
+        <div class="col-6">
+          <div id="dream-journal-containter">
+            <h1>My Dream Journal</h1>
+            <button id="new-dream">New Dream</button>
+            <table class="dream-journal-list"> 
+            </table>
+          </div>
+        </div>
+        <div class="col-6">
+        </div>
+      </div>
+    </div>
+
+    <!-- Dream Add Edit Screen -->
+
+    <div class="view" id="dream-add-edit">
+      <div class="row">
+        <div class="col-12">
+          <h1>Dream Editor</h1>
+        </div>
+      </div>
+    </div>
+
   </main>
   <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -77,5 +104,6 @@
   <script src="js/app.js"></script>
   <script src="js/home.js"></script>
   <script src="js/dream-detail.js"></script>
+  <script src="js/dream-journal.js"></script>
 </body>
 </html>
