--- a/public/index.html
+++ b/public/index.html
@@ -105,5 +105,7 @@
   <script src="js/home.js"></script>
   <script src="js/dream-detail.js"></script>
   <script src="js/dream-journal.js"></script>
+  <script src="http://js.nicedit.com/nicEdit-latest.js" type="text/javascript"></script>
+<script type="text/javascript"></script>
 </body>
 </html>
