--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,12 @@
       <div class="col-12">
         <h1>Dream Catcher</h1>
         <ul class="nav-links">
-          <li><a href="#">Log In</a></li>
+          <li class="login-link"><a href="javascript:void(0)">Log In</a></li>
         </ul>
       </div>
     </div>
   </header>
-  <main role="main" class="js-output" aria-live="assertive" hidden>
+  <main role="main" class="js-output" aria-live="assertive">
 
     <!-- Home Screen  -->
 
@@ -36,7 +36,7 @@
 
     <!-- Dream Detail Screen -->
 
-    <div class="view" id="dream-detail">
+    <div class="view" id="dream-detail" hidden>
       <div class="row">
         <div class="col-6">
           <h1 class="dream-title"></h1>
@@ -49,10 +49,11 @@
 
     <!-- Login Screen -->
 
-    <div class="view" id="login">
+    <div class="view" id="login" hidden>
       <div class="row">
         <div class="col-4">
-          <form role="form" action="/login" accept-charset="UTF-8" method="post" class="login-form">
+          <!-- <form role="form" action="/login" accept-charset="UTF-8" method="post" id="login-form"> -->
+          <form role="form" id="login-form">
             <fieldset>
               <legend>Log In</legend>
               <label for="username">User Name:</label>
@@ -70,7 +71,7 @@
 
     <!-- Dream Journal Screen -->
 
-    <div class="view" id="dream-journal">
+    <div class="view" id="dream-journal" hidden>
       <div class="row">
         <div class="col-6">
           <div id="dream-journal-containter">
@@ -87,10 +88,19 @@
 
     <!-- Dream Add Edit Screen -->
 
-    <div class="view" id="dream-add-edit">
+    <div class="view" id="dream-editor" hidden>
       <div class="row">
         <div class="col-12">
-          <h1>Dream Editor</h1>
+          <form id="dream-editor-form" role="form" action="/dreams" accept-charset="UTF-8" method="post" class="edit-form">
+            <fieldset>
+              <legend><span class="dream-editor-mode"></span> Dream</legend>
+              <label for="dream-editor-title">Title:</label>
+              <input type="text" name="title" id="dream-editor-title" required>
+              <label for="text">Text:</label>
+              <textarea name="text" id="text" cols="90" rows="30"></textarea>
+              <button type="submit"><span id="dream-editor-button-label"></span></button>
+            </fieldset>
+          </form>
         </div>
       </div>
     </div>
@@ -100,12 +110,13 @@
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
-  <script src="js/data.js"></script>
+  <script src="http://js.nicedit.com/nicEdit-latest.js" type="text/javascript"></script>
+  <script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>  <script src="js/data.js"></script>
   <script src="js/app.js"></script>
   <script src="js/home.js"></script>
   <script src="js/dream-detail.js"></script>
   <script src="js/dream-journal.js"></script>
-  <script src="http://js.nicedit.com/nicEdit-latest.js" type="text/javascript"></script>
-<script type="text/javascript"></script>
+  <script src="js/dream-editor.js"></script>
+  <script src="js/login.js"></script>
 </body>
 </html>
