--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,13 @@
       <div class="col-12">
         <h1>Dream Catcher</h1>
         <ul class="nav-links">
+          <li class=""></li>
           <li class="login-link"><a href="javascript:void(0)">Log In</a></li>
         </ul>
       </div>
     </div>
   </header>
+
   <main role="main" class="js-output" aria-live="assertive">
 
     <!-- Home Screen  -->
@@ -86,11 +88,11 @@
       </div>
     </div>
 
-    <!-- Dream Add Edit Screen -->
-
-    <div class="view" id="dream-editor" hidden>
+    <!-- Dream Editor -->
+    <div class="view" id="dream-editor">
       <div class="row">
         <div class="col-12">
+
           <form id="dream-editor-form" role="form" action="/dreams" accept-charset="UTF-8" method="post" class="edit-form">
             <fieldset>
               <legend><span class="dream-editor-mode"></span> Dream</legend>
