--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     <div class="view" id="recent-dreams" hidden>
       <div class="row">
         <div class="col-12">
+          <h1>Recent Dreams:</h1>
           <ul class="dream-list">
           </ul>
         </div>
@@ -45,6 +46,8 @@
           <h2><span class="dream-author"></span> <span class="dream-publish-date"></span></h2>
           <p class="dream-text"></p>
           <button class="dream-back">Back</button>
+          <button class="dream-edit">Edit</button>
+
         </div>
       </div>
     </div>
@@ -92,14 +95,13 @@
     <div class="view" id="dream-editor">
       <div class="row">
         <div class="col-12">
-
           <form id="dream-editor-form" role="form" action="/dreams" accept-charset="UTF-8" method="post" class="edit-form">
             <fieldset>
               <legend><span class="dream-editor-mode"></span> Dream</legend>
               <label for="dream-editor-title">Title:</label>
               <input type="text" name="title" id="dream-editor-title" required>
-              <label for="text">Text:</label>
-              <textarea name="text" id="text" cols="90" rows="30"></textarea>
+              <label for="dream-editor-text">Text:</label>
+              <textarea name="text" id="dream-editor-text" cols="90" rows="20" required></textarea>
               <button type="submit"><span id="dream-editor-button-label"></span></button>
             </fieldset>
           </form>
@@ -108,12 +110,11 @@
     </div>
 
   </main>
-  <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
   <script src="http://js.nicedit.com/nicEdit-latest.js" type="text/javascript"></script>
   <script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>  <script src="js/data.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
   <script src="js/app.js"></script>
   <script src="js/home.js"></script>
   <script src="js/dream-detail.js"></script>
