--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <header role="banner">
     <div class="row">
       <div class="col-12">
-        <h1 id="logo">Dream Catcher</h1>
+        <h1 class="logo">Dream Catcher</h1>
         <ul class="nav-links">
           <li class=""></li>
           <li><a class="login-link" href="javascript:void(0)">Log In</a></li>
@@ -47,7 +47,6 @@
           <p class="dream-text"></p>
           <button class="dream-back">Back</button>
           <button class="dream-edit">Edit</button>
-
         </div>
       </div>
     </div>
@@ -58,7 +57,7 @@
       <div class="row">
         <div class="col-4">
           <!-- <form role="form" action="/login" accept-charset="UTF-8" method="post" id="login-form"> -->
-          <form role="form" id="login-form">
+          <form role="form" class="login-form">
             <fieldset>
               <legend>Log In</legend>
               <label for="username">User Name:</label>
@@ -79,9 +78,9 @@
     <div class="view" id="dream-journal" hidden>
       <div class="row">
         <div class="col-6">
-          <div id="dream-journal-containter">
+          <div class="dream-journal-containter">
             <h1>My Dream Journal</h1>
-            <button id="new-dream">New Dream</button>
+            <button class="new-dream">New Dream</button>
             <table class="dream-journal-list"> 
             </table>
           </div>
@@ -95,14 +94,14 @@
     <div class="view" id="dream-editor">
       <div class="row">
         <div class="col-12">
-          <form id="dream-editor-form" role="form" action="/dreams" accept-charset="UTF-8" method="post" class="edit-form">
+          <form class="dream-editor-form" role="form" accept-charset="UTF-8" class="edit-form">
             <fieldset>
               <legend><span class="dream-editor-mode"></span> Dream</legend>
               <label for="dream-editor-title">Title:</label>
               <input type="text" name="title" id="dream-editor-title" required>
               <label for="dream-editor-text">Text:</label>
               <textarea name="text" id="dream-editor-text" cols="90" rows="20" required></textarea>
-              <button type="submit"><span id="dream-editor-button-label"></span></button>
+              <button type="submit"><span class="dream-editor-button-label"></span></button>
             </fieldset>
           </form>
         </div>
@@ -111,10 +110,11 @@
 
   </main>
   <script src="http://js.nicedit.com/nicEdit-latest.js" type="text/javascript"></script>
-  <script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>  <script src="js/data.js"></script>
+  <script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script> 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
+  <script src="js/data.js"></script>
   <script src="js/app.js"></script>
   <script src="js/home.js"></script>
   <script src="js/dream-detail.js"></script>
