--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,7 @@
               <input type="password" name="password" id="password" required>
               <button type="submit">Submit</button>
             </fieldset>
+            <span class="login-message">Hello</span>
           </form>
         </div>
         <div class="col-4"></div>
@@ -114,6 +115,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
   <script src="js/data.js"></script>
   <script src="js/app.js"></script>
   <script src="js/home.js"></script>
