--- a/public/index.html
+++ b/public/index.html
@@ -42,10 +42,12 @@
     <div class="view" id="dream-detail" hidden>
       <div class="row">
         <div class="col-6">
+          <span class="dream-detail-message"></span>
           <h1 class="dream-title"></h1>
           <h2><span class="dream-author"></span> <span class="dream-publish-date"></span></h2>
           <p class="dream-text"></p>
           <button class="dream-back">Back</button>
+          <button class="dream-delete">Delete</button>
           <button class="dream-edit">Edit</button>
         </div>
       </div>
@@ -79,6 +81,7 @@
       <div class="row">
         <div class="col-6">
           <div class="dream-journal-containter">
+            <span class="dream-journal-message"></span>
             <h1>My Dream Journal</h1>
             <button class="new-dream">New Dream</button>
             <table class="dream-journal-list"> 
@@ -95,19 +98,19 @@
     <div class="view" id="dream-editor">
       <div class="row">
         <div class="col-12">
-          <form class="dream-editor-form" role="form" accept-charset="UTF-8" class="edit-form">
+          <form role="form" class="dream-editor-form">
             <fieldset>
               <legend><span class="dream-editor-mode"></span> Dream</legend>
-              <span class="dream-editor-message">Hello World</span>
+              <span class="dream-editor-message"></span>
               <label for="dream-editor-title">Title:</label>
               <input type="text" name="title" id="dream-editor-title">
               <label for="dream-editor-text">Text:</label>
               <textarea name="text" id="dream-editor-text" rows="20"></textarea>
-              <button type="submit"><span class="dream-editor-submit-label"></span></button>
+              <button type="submit" class="dream-editor-submit"><span class="dream-editor-submit-label"></span></button>
               <button class="dream-editor-back">Back</button>
             </fieldset>
           </form>
-        </div>
+        </div>      
       </div>
     </div>
 
