--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
     </div>
 
   </main>
-  <script src="http://js.nicedit.com/nicEdit-latest.js" type="text/javascript"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/NicEdit/0.93/nicEdit.js" type="text/javascript"></script>
   <script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script> 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
