--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,7 @@
               <label for="dream-editor-title">Title:</label>
               <input type="text" name="title" id="dream-editor-title">
               <label for="dream-editor-text">Text:</label>
-              <textarea name="text" id="dream-editor-text" rows="20"></textarea>
+              <textarea name="text" id="dream-editor-text" rows="20" style="width:100%; height:100%;"></textarea></textarea>
               <button type="submit" class="dream-editor-submit"><span class="dream-editor-submit-label"></span></button>
               <button class="dream-editor-back">Back</button>
             </fieldset>
@@ -122,7 +122,7 @@
     </div>
 
   </main>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/NicEdit/0.93/nicEdit.js" type="text/javascript"></script>
+  <script src="js/nicEdit.js" type="text/javascript"></script>
   <script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script> 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
