fixed author, layout on dream detail screen

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,8 @@
         <div class="col-6">
           <span class="dream-detail-message"></span>
           <h1 class="dream-title"></h1>
-          <h2><span class="dream-author"></span> <span class="dream-publish-date"></span></h2>
+          <p class="dream-author"></p> 
+          <p class="dream-publish-date"></p>
           <p class="dream-text"></p>
           <button class="dream-back">Back</button>
           <button class="dream-delete">Delete</button>
