finished tests for GET /dreams/:id

--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,7 @@
             <ul class="dream-comments"></ul>                
             <form role="form" class="comment-add-form">
               <legend>Leave a Comment:</legend>
+              <span class="create-comment-message"></span>
               <label for="comment-text">Comment:</label>
               <textarea name="comment-text" id="comment-text" rows="20"></textarea>
               <button type="submit">Add Comment</button>
