comments form working

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 
     <!-- Dream Detail Screen -->
 
-    <div class="view" id="dream-detail">
+    <div class="view" id="dream-detail" hidden>
       <div class="row">
         <div class="col-12">
           <div class="container">
