added comment delete links

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
       </div>
       <div class="row">
         <div class="col-12">
+          <span class="home-screen-message"></span>
           <ul class="dream-list">
           </ul>
         </div>
