added pagination to home page

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,8 @@
         </div>
       </div>
       <div class="row">
+        <a href="javascript:void(0)" class="dreams-previous dreams-nav-link">< Previous</a>
+        <a href="javascript:void(0)" class="dreams-next dreams-nav-link">Next ></a>
         <div class="flex-container">    
         </div>
       </div>
