fixed AXE violations

--- a/public/index.html
+++ b/public/index.html
@@ -67,8 +67,7 @@
           <div class="container">
             <span class="dream-detail-message"></span>
             <h1 class="dream-title"></h1>
-            <p class="dream-author"></p> 
-            <p class="dream-publish-date"></p>
+            <p class="dream-details"><span class="dream-author"></span> <span class="dream-publish-date"></span></p> 
             <p class="dream-text"></p>
             <ul class="dream-comments"></ul>                
             <form role="form" class="comment-add-form">
