--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     </div>
   </header>
 
-  <main role="main" class="js-output" aria-live="assertive">
+  <main role="main" aria-live="assertive">
 
     <!-- Home Screen  -->
     
