--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
           <li><a class="dream-journal-link user-link" href="javascript:void(0)">Dream Journal</a></li>
           <li><a class="register-link public-link" href="javascript:void(0)">Register</a></li>
           <li class="icon">
-            <a href="javascript:void(0);" class="user-link public-link">&#8801;</a>
+            <a href="javascript:void(0);" class="menu-link user-link public-link">&#8801;</a>
           </li>
         </ul>
       </div>
