fix for editor background

--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
         <div class="view" id="dream-detail">
           <div class="row">
             <div class="col-12">
-              <div class="container">
+              <div class="editor-container">
                 <span class="dream-detail-message"></span>
                 <h1 class="dream-title"></h1>
                 <p class="dream-details">
